--- a/environment.yml
+++ b/environment.yml
@@ -3,4 +3,5 @@ name: finance-analytics-conda-environment
 dependencies:
   - python=3.10
   - pandas=1.5.1
-  - pdfplumber=0.7.5
+  - pip:
+    - pdfplumber==0.7.5
