Descope macOS as later issue to resolve

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
         python-version: ["3.8", "3.9", "3.10"]
 
     steps:
@@ -29,10 +29,6 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        # Update conda to fix the pip subprocess errors on macos
-        if [ "$RUNNER_OS" == "macOS" ]; then
-          conda update -n base -c defaults conda
-        fi
         conda env update --file environment.yml --name base
     - name: Lint with flake8
       run: |
