--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -3,7 +3,7 @@ name: Python Package using Conda
 on: [workflow_dispatch]
 
 jobs:
-  build:
+  test-matrix:
 
     runs-on: ${{ matrix.os }}
 
@@ -41,3 +41,27 @@ jobs:
       run: |
         conda install pytest
         pytest
+
+    deploy:
+
+      runs-on: ubuntu-latest
+      needs: test-matrix
+
+      steps:
+        - uses: actions/checkout@v3
+        - name: Set up Python
+          uses: actions/setup-python@v4.4.0
+          with:
+            python-version: "3.10.8"
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install build
+        - name: Build package
+          run: python -m build
+        - name: Publish package
+          uses: pypa/gh-action-pypi-publish@v1.6.4
+          with:
+            user: __token__
+            password: ${{ secrets.PYPI_API_TOKEN }}
+
