--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -61,10 +61,10 @@ jobs:
           python-version: "3.10.8"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install build
+          python3 -m pip install --upgrade pip
+          python3 -m pip install build
       - name: Build package
-        run: python -m build
+        run: python3 -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.6.4
         with:
