--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -64,9 +64,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install build
       - name: Build package
-        run: python -m build
+        run: python -m build --sdist --wheel --outdir dist/
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.6.4
         with:
+          verbose: true
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
