--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -68,6 +68,6 @@ jobs:
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.6.4
         with:
-          verbose: true
+          verify_metadata: false
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
