--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
-[tool.setuptools]
+[tool.setuptools_scm]
 py-modules = []
 [testenv]
 commands = "python -m unittest discover"
